@@ -109,6 +109,9 @@ Trunk -  Unreleased
 
     HIVE-1119. Serialize all tasks (Zheng Shao via namit)
 
+    HIVE-1119. Change default size of average size to 16M
+    (Zheng Shao via namit)
+
 Release 0.5.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
